Addition of Comments

--- a/task.html
+++ b/task.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+
+    <!-- Meta Data -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,6 +23,8 @@
         <br>
         <br>
         <h2>Tasker</h2>
+
+        <!-- Main -->
     <main>
 	    <label for="favchap"> Enter Task - Time - Date </label>
 	    <input type="text" id="favchap" placeholder="Tasks">
@@ -29,6 +33,7 @@
     </main>
 
     <br>
+    <!-- Footer -->
     <footer>
         <p>
             &copy;
